--- a/iTester/OneLineEditor.xaml
+++ b/iTester/OneLineEditor.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Title" Height="100" Width="450" MaxHeight="100" MinHeight="100"
-        WindowStartupLocation="CenterScreen" Icon="/iTester;component/Resources/OneLineEditor.ico"
+        WindowStartupLocation="CenterScreen" Icon="/Testempo;component/Resources/OneLineEditor.ico"
         Loaded="OneLineEditor_Loaded" FontFamily="Calibri" FontSize="13">
     <Grid>
         <Grid.RowDefinitions>
