--- a/SunRain/ManagementSystem/ManagementSystem/SelectDTU.xaml
+++ b/SunRain/ManagementSystem/ManagementSystem/SelectDTU.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="ManagementSystem.SelectDTU"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Select DTU" Height="300" Width="600" WindowStartupLocation="CenterScreen" Loaded="Window_Load">
+        Title="Select DTU" Height="300" Width="600" WindowStartupLocation="CenterScreen" Loaded="Window_Load" Icon="/ManagementSystem;component/Resources/dtuview.ico">
     <DockPanel>
         <DockPanel DockPanel.Dock="Bottom" Height="30">
             <!--Button Content="Refesh" Width="75" Margin="1" DockPanel.Dock="Left"
