--- a/SunRain/ManagementSystem/ServiceConfiguration/ServiceConfiguration.xaml
+++ b/SunRain/ManagementSystem/ServiceConfiguration/ServiceConfiguration.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Service Management" Height="600" Width="800" WindowStartupLocation="CenterScreen"
-        Loaded="Window_Load">
+        Loaded="Window_Load" Icon="/ServiceConfiguration;component/Resources/configuration.ico">
     <Window.Resources>
         <!--Style x:Key="MessageRowBackground" TargetType="{x:Type DataGridRow}">
             <Style.Triggers>
@@ -50,7 +50,7 @@
                 <MenuItem Header="Disconnect User" Click="UserDisconnect_MenuItem_Click" ToolTip="Add User"
                           IsEnabled="{Binding Path=Connected,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
                     <MenuItem.Icon>
-                        <Image Source="resources/userdisc.ico" Height="15" Style="{StaticResource ImageEnableDisableStyle}"/>
+                        <Image Source="resources/useroffline.ico" Height="15" Style="{StaticResource ImageEnableDisableStyle}"/>
                     </MenuItem.Icon>
                 </MenuItem>
                 <MenuItem Header="Remove User" Click="UserRemove_MenuItem_Click" ToolTip="Remove User"
@@ -125,7 +125,7 @@
                     IsEnabled="{Binding Path=Connected,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
                     ToolTip="Add User">
                 <Button.Content>
-                    <Image Margin="-3" Source="resources/userdisc.ico" Style="{StaticResource ImageEnableDisableStyle}"/>
+                    <Image Margin="-3" Source="resources/useroffline.ico" Style="{StaticResource ImageEnableDisableStyle}"/>
                 </Button.Content>
             </Button>
             <Button Click="UserRemove_MenuItem_Click" BorderBrush="DarkGray" Margin="1"
