--- a/SunRain/ManagementSystem/TerminalConfiguration/TerminalConfiguration.xaml
+++ b/SunRain/ManagementSystem/TerminalConfiguration/TerminalConfiguration.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="TerminalConfiguration.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="DTU Configuration" Height="600" Width="800" Loaded="Window_Load" Icon="/TerminalConfiguration;component/Resources/dtu.ico">
+        Title="DTU Configuration" Height="750" Width="1000" Loaded="Window_Load" Icon="/TerminalConfiguration;component/Resources/dtu.ico">
     <Window.Resources>
         <Style x:Key="MessageRowBackground" TargetType="{x:Type DataGridRow}">
             <Style.Triggers>
@@ -68,7 +68,7 @@
                 </MenuItem>
             </MenuItem>
         </Menu>
-        <ToolBar DockPanel.Dock="Top" Height="27"
+        <ToolBar DockPanel.Dock="Top" Height="39"
                  IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
             <Button Click="OpenConfig_MenuItem_Click" BorderBrush="DarkGray" Margin="1"
                     ToolTip="Open Configuration">
@@ -126,12 +126,19 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             <DockPanel Grid.Column="0">
-                <GroupBox Margin="3" Grid.Row="0" DockPanel.Dock="Top">
+                <GroupBox Margin="3" Grid.Row="0" DockPanel.Dock="Top" BorderThickness="2" BorderBrush="Blue">
                     <GroupBox.Header>
                         <StackPanel Orientation="Horizontal">
-                            <Label Content="Local Config" Foreground="Blue"/>
-                            <Button Content="Refresh" Width="50" Click="Refresh_Button_Click"
-                                    IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
+                            <Label Content="Local Config" Foreground="Blue" FontWeight="Bold"/>
+                            <Button Height="30" Width="80" Click="Refresh_Button_Click"
+                                    IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
+                                <Button.Content>
+                                    <StackPanel Orientation="Horizontal">
+                                        <Image Source="/TerminalConfiguration;component/Resources/refresh.ico"/>
+                                        <Label Content="Refresh" FontWeight="Bold" />
+                                    </StackPanel>
+                                </Button.Content>
+                            </Button>
                             <!--Button Content="Reopen" Width="50" Click="Reopen_Button_Click"/-->
                         </StackPanel>
                     </GroupBox.Header>
@@ -161,28 +168,49 @@
                                   IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
                     </Grid>
                 </GroupBox>
-                <GroupBox Margin="3" Grid.Row="1" DockPanel.Dock="Top">
+                <GroupBox Margin="3" Grid.Row="1" DockPanel.Dock="Top" BorderBrush="Blue" BorderThickness="2">
                     <GroupBox.Header>
                         <StackPanel Orientation="Horizontal">
-                            <Label Content="DTU Config" Foreground="Blue"/>
+                            <Label Content="DTU Config" Foreground="Blue" FontWeight="Bold"/>
                             <!--Button Content="Initiate" Width="50" Click="Initiate_DTU_Button_Click"/-->
-                            <Button Content="Read" Width="53" Margin="3,0,0,0" Click="Read_DTU_Button_Click"
-                                    IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
+                            <Button Height="30" Width="80" Margin="3,0,0,0" Click="Read_DTU_Button_Click"
+                                    IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
+                                <Button.Content>
+                                    <StackPanel Orientation="Horizontal">
+                                        <Image Source="/TerminalConfiguration;component/Resources/read.ico"/>
+                                        <Label Content="Read" FontWeight="Bold"/>
+                                    </StackPanel>
+                                </Button.Content>
+                            </Button>
                             <!--Button Content="Create" Width="53" Margin="3,0,0,0" Click="Create_DTU_Button_Click"/-->
-                            <Button Content="Write" Width="53" Margin="3,0,0,0" Click="Write_DTU_Button_Click"
-                                    IsEnabled="{Binding Path=InputOK,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
-                            <Button Content="Stop" Width="53" Margin="3,0,0,0" Click="Stop_DTU_Button_Click"
-                                    IsEnabled="{Binding Path=InRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
+                            <Button Height="30" Width="80" Margin="3,0,0,0" Click="Write_DTU_Button_Click"
+                                    IsEnabled="{Binding Path=InputOK,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
+                                <Button.Content>
+                                    <StackPanel Orientation="Horizontal">
+                                        <Image Source="/TerminalConfiguration;component/Resources/write.ico"/>
+                                        <Label Content="Write" FontWeight="Bold"/>
+                                    </StackPanel>
+                                </Button.Content>
+                            </Button>
+                            <Button Height="30" Width="80" Margin="3,0,0,0" Click="Stop_DTU_Button_Click"
+                                    IsEnabled="{Binding Path=InRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
+                                <Button.Content>
+                                    <StackPanel Orientation="Horizontal">
+                                        <Image Source="/TerminalConfiguration;component/Resources/stop.ico"/>
+                                        <Label Content="Stop" FontWeight="Bold"/>
+                                    </StackPanel>
+                                </Button.Content>
+                            </Button>
                             <CheckBox Content="Power-Cycle" HorizontalAlignment="Left" VerticalAlignment="Center"
                                       IsThreeState="False" Margin="3,0,0,0"
                                       IsChecked="{Binding Path=PowerCycleNeeded,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
                         </StackPanel>
                     </GroupBox.Header>
                     <StackPanel>
-                        <GroupBox>
+                        <GroupBox BorderBrush="#FF00AF00">
                             <GroupBox.Header>
                                 <StackPanel Orientation="Horizontal">
-                                    <Label Content="Connection" Foreground="Green"/>
+                                    <Label Content="Connection" Foreground="Green" FontWeight="Bold"/>
                                 </StackPanel>
                             </GroupBox.Header>
                             <Grid>
@@ -226,10 +254,10 @@
                             </Grid>
                         </GroupBox>
                         <Grid Height="10"/>
-                        <GroupBox>
+                        <GroupBox BorderBrush="#FF00AF00">
                             <GroupBox.Header>
                                 <StackPanel Orientation="Horizontal">
-                                    <Label Content="DTU" Foreground="Green"/>
+                                    <Label Content="DTU" Foreground="Green" FontWeight="Bold"/>
                                 </StackPanel>
                             </GroupBox.Header>
                             <Grid>
