--- a/SunRain/ManagementSystem/ManagementSystem/LoginWindow.xaml
+++ b/SunRain/ManagementSystem/ManagementSystem/LoginWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Remote Management Login" Height="200" ResizeMode="NoResize" Width="400" 
-        WindowStartupLocation="CenterScreen" Loaded="Window_Load" Icon="/ManagementSystem;component/Resources/login.ico">
+        WindowStartupLocation="CenterScreen" Loaded="Window_Load" Icon="/ManagementSystem;component/Resources/bottom_logo.gif">
     <Grid Margin="3">
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
