--- a/SunRain/ManagementSystem/ManagementSystem/ManagementSystem.xaml
+++ b/SunRain/ManagementSystem/ManagementSystem/ManagementSystem.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Mananagement System" Height="800" Width="1000" WindowStartupLocation="CenterScreen"
-        Icon="/ManagementSystem;component/Resources/terminalmanagementsystem.ico" Loaded="Window_Load"
+        Icon="/ManagementSystem;component/Resources/bottom_logo.gif" Loaded="Window_Load"
         MinHeight="150" MinWidth="200">
     <Window.Resources>
         <!--Style x:Key="MessageRowBackground" TargetType="{x:Type DataGridRow}">
