--- a/SunRain/ManagementSystem/ServiceConfiguration/ServiceConfiguration.xaml
+++ b/SunRain/ManagementSystem/ServiceConfiguration/ServiceConfiguration.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Service Management" Height="600" Width="800" WindowStartupLocation="CenterScreen"
-        Loaded="Window_Load" Icon="/ServiceConfiguration;component/Resources/configuration.ico">
+        Loaded="Window_Load" Icon="/ServiceConfiguration;component/Resources/bottom_logo.gif">
     <Window.Resources>
         <!--Style x:Key="MessageRowBackground" TargetType="{x:Type DataGridRow}">
             <Style.Triggers>
