--- a/SunRain/ManagementSystem/TerminalConfiguration/TerminalConfiguration.xaml
+++ b/SunRain/ManagementSystem/TerminalConfiguration/TerminalConfiguration.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="TerminalConfiguration.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="DTU Configuration" Height="750" Width="1000" Loaded="Window_Load" Icon="/TerminalConfiguration;component/Resources/dtu.ico">
+        Title="DTU Configuration" Height="750" Width="1000" Loaded="Window_Load" Icon="/TerminalConfiguration;component/Resources/bottom_logo.gif">
     <Window.Resources>
         <Style x:Key="MessageRowBackground" TargetType="{x:Type DataGridRow}">
             <Style.Triggers>
