--- a/SunRain/ManagementSystem/ManagementSystem/ServerConfiguration.xaml
+++ b/SunRain/ManagementSystem/ManagementSystem/ServerConfiguration.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:itl="clr-namespace:InformationTransferLibrary;assembly=InformationTransferLibrary"
-        Title="Server Configuration" Height="180" Width="300" MaxHeight="180" MinHeight="180" MinWidth="350" MaxWidth="350"
+        Title="Server Configuration" Height="180" Width="300" ResizeMode="NoResize"
         WindowStartupLocation="CenterScreen" Icon="/ManagementSystem;component/Resources/remoteconfig.ico"
         FontFamily="Calibri" FontSize="13" Loaded="Window_Load">
     <Window.Resources>
