--- a/SunRain/ManagementSystem/ManagementSystem/ManagementSystem.xaml
+++ b/SunRain/ManagementSystem/ManagementSystem/ManagementSystem.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="ManagementSystem.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Mananagement System" Height="600" Width="800" WindowStartupLocation="CenterScreen"
+        Title="DTU管理系统" Height="600" Width="800" WindowStartupLocation="CenterScreen"
         Icon="/ManagementSystem;component/Resources/bottom_logo.gif" Loaded="Window_Load"
         MinHeight="150" MinWidth="200">
     <Window.Resources>
@@ -27,40 +27,47 @@
     </Window.Resources>
     <DockPanel>
         <Menu DockPanel.Dock="Top" Height="23">
-            <MenuItem Header="File">
-                <MenuItem Header="Clear Log" Click="ClearLog_MenuItem_Click" ToolTip="Clear Log">
+            <MenuItem Header="文件">
+                <MenuItem Header="清除日志" Click="ClearLog_MenuItem_Click">
                     <MenuItem.Icon>
                         <Image Source="resources/clearlog.ico" Height="15" Style="{StaticResource ImageEnableDisableStyle}"/>
                     </MenuItem.Icon>
                 </MenuItem>
-                <MenuItem Header="Save Log" Click="SaveLog_MenuItem_Click" ToolTip="Clear Log">
+                <MenuItem Header="保存日志" Click="SaveLog_MenuItem_Click">
                     <MenuItem.Icon>
                         <Image Source="resources/savelog.ico" Height="15" Style="{StaticResource ImageEnableDisableStyle}"/>
                     </MenuItem.Icon>
                 </MenuItem>
                 <Separator/>
-                <MenuItem Header="Exit" Click="Window_Exit" ToolTip="Exit"
+                <MenuItem Header="退出" Click="Window_Exit"
                           IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
                     <MenuItem.Icon>
                         <Image Source="resources/exit.png" Height="15" Style="{StaticResource ImageEnableDisableStyle}"/>
                     </MenuItem.Icon>
                 </MenuItem>
             </MenuItem>
-            <MenuItem Header="Config">
-                <MenuItem Header="Server Configuration" Click="ServerConfig_MenuItem_Click" ToolTip="Server Configuration"
+            <MenuItem Header="配置">
+                <MenuItem Header="重新连接" Click="Reconnect_MenuItem_Click"
+                          IsEnabled="{Binding Path=NotConnected,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
+                    <MenuItem.Icon>
+                        <Image Source="resources/refreshterminal.ico" Height="15" Style="{StaticResource ImageEnableDisableStyle}"/>
+                    </MenuItem.Icon>
+                </MenuItem>
+                <Separator/>
+                <MenuItem Header="服务器配置" Click="ServerConfig_MenuItem_Click"
                           IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
                     <MenuItem.Icon>
                         <Image Source="resources/remoteconfig.ico" Height="15" Style="{StaticResource ImageEnableDisableStyle}"/>
                     </MenuItem.Icon>
                 </MenuItem>
-                <MenuItem Header="Local Configuration" Click="LocalConfig_MenuItem_Click" ToolTip="Local Configuration"
+                <MenuItem Header="本地配置" Click="LocalConfig_MenuItem_Click"
                           IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
                     <MenuItem.Icon>
                         <Image Source="resources/localconfig.ico" Height="15" Style="{StaticResource ImageEnableDisableStyle}"/>
                     </MenuItem.Icon>
                 </MenuItem>
                 <Separator/>
-                <MenuItem Header="Add DTU" Click="AddDTU_MenuItem_Click" ToolTip="Add DTU"
+                <MenuItem Header="添加DTU" Click="AddDTU_MenuItem_Click"
                           IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
                     <MenuItem.Icon>
                         <Image Source="resources/addterminal.ico" Height="15" Style="{StaticResource ImageEnableDisableStyle}"/>
@@ -72,15 +79,34 @@
                         <Image Source="resources/refreshterminal.ico" Height="15" Style="{StaticResource ImageEnableDisableStyle}"/>
                     </MenuItem.Icon>
                 </MenuItem-->
-                <MenuItem Header="Delete DTU" Click="DeleteDTU_MenuItem_Click" ToolTip="Delete DTU"
+                <MenuItem Header="删除DTU" Click="DeleteDTU_MenuItem_Click"
                           IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
                     <MenuItem.Icon>
                         <Image Source="resources/deleteterminal.ico" Height="15" Style="{StaticResource ImageEnableDisableStyle}"/>
                     </MenuItem.Icon>
                 </MenuItem>
+                <Separator/>
+                <MenuItem Header="独立控制DTU" Click="View1DTU_MenuItem_Click"
+                          IsEnabled="{Binding Path=View1DTUEnabled,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
+                    <MenuItem.Icon>
+                        <Image Source="resources/view1dtu.ico" Height="15" Style="{StaticResource ImageEnableDisableStyle}"/>
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem Header="成对控制DTU" Click="View2DTUs_MenuItem_Click"
+                          IsEnabled="{Binding Path=View2DTUsEnabled,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
+                    <MenuItem.Icon>
+                        <Image Source="resources/view2dtus.ico" Height="15" Style="{StaticResource ImageEnableDisableStyle}"/>
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem Header="平铺控制DTU" Click="View4DTUs_MenuItem_Click"
+                          IsEnabled="{Binding Path=View4DTUsEnabled,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
+                    <MenuItem.Icon>
+                        <Image Source="resources/view4dtus.ico" Height="15" Style="{StaticResource ImageEnableDisableStyle}"/>
+                    </MenuItem.Icon>
+                </MenuItem>
             </MenuItem>
-            <MenuItem Header="Help">
-                <MenuItem Header="About..." Click="About_MenuItem_Click">
+            <MenuItem Header="帮助">
+                <MenuItem Header="关于..." Click="About_MenuItem_Click">
                     <MenuItem.Icon>
                         <Image Source="resources/about.ico" Height="15" Style="{StaticResource ImageEnableDisableStyle}"/>
                     </MenuItem.Icon>
@@ -105,26 +131,27 @@
             </Button-->
             <Button Click="Reconnect_MenuItem_Click" BorderBrush="DarkGray" Margin="1"
                     IsEnabled="{Binding Path=NotConnected,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
-                    ToolTip="Reconnect" Visibility="Collapsed">
+                    ToolTip="重新连接">
                 <Button.Content>
                     <Image Margin="-3" Source="resources/refreshterminal.ico" Style="{StaticResource ImageEnableDisableStyle}"/>
                 </Button.Content>
             </Button>
+            <Separator/>
             <Button Click="ServerConfig_MenuItem_Click" BorderBrush="DarkGray" Margin="1"
-                    ToolTip="Server Configuration">
+                    ToolTip="服务器配置">
                 <Button.Content>
                     <Image Margin="-3" Source="resources/remoteconfig.ico" Style="{StaticResource ImageEnableDisableStyle}"/>
                 </Button.Content>
             </Button>
             <Button Click="LocalConfig_MenuItem_Click" BorderBrush="DarkGray" Margin="1"
-                    ToolTip="Local Configuration">
+                    ToolTip="本地配置">
                 <Button.Content>
                     <Image Margin="-3" Source="resources/localconfig.ico" Style="{StaticResource ImageEnableDisableStyle}"/>
                 </Button.Content>
             </Button>
             <Separator/>
             <Button Click="AddDTU_MenuItem_Click" BorderBrush="DarkGray" Margin="1"
-                    ToolTip="Add DTU">
+                    ToolTip="添加DTU">
                 <Button.Content>
                     <Image Margin="-3" Source="resources/addterminal.ico" Style="{StaticResource ImageEnableDisableStyle}"/>
                 </Button.Content>
@@ -136,34 +163,56 @@
                 </Button.Content>
             </Button-->
             <Button Click="DeleteDTU_MenuItem_Click" BorderBrush="DarkGray" Margin="1"
-                    ToolTip="Delete DTU">
+                    ToolTip="删除DTU">
                 <Button.Content>
                     <Image Margin="-3" Source="resources/deleteterminal.ico" Style="{StaticResource ImageEnableDisableStyle}"/>
                 </Button.Content>
             </Button>
             <Separator/>
+            <Button Click="View1DTU_MenuItem_Click" BorderBrush="DarkGray" Margin="1"
+                    IsEnabled="{Binding Path=View1DTUEnabled,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
+                    ToolTip="独立控制DTU">
+                <Button.Content>
+                    <Image Margin="-3" Source="resources/view1dtu.ico" Style="{StaticResource ImageEnableDisableStyle}"/>
+                </Button.Content>
+            </Button>
+            <Button Click="View2DTUs_MenuItem_Click" BorderBrush="DarkGray" Margin="1"
+                    IsEnabled="{Binding Path=View2DTUsEnabled,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
+                    ToolTip="成对控制DTU">
+                <Button.Content>
+                    <Image Margin="-3" Source="resources/view2dtus.ico" Style="{StaticResource ImageEnableDisableStyle}"/>
+                </Button.Content>
+            </Button>
+            <Button Click="View4DTUs_MenuItem_Click" BorderBrush="DarkGray" Margin="1"
+                    IsEnabled="{Binding Path=View4DTUsEnabled,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
+                    ToolTip="平铺控制DTU">
+                <Button.Content>
+                    <Image Margin="-3" Source="resources/view4dtus.ico" Style="{StaticResource ImageEnableDisableStyle}"/>
+                </Button.Content>
+            </Button>
+            <Separator/>
             <Button Click="ClearLog_MenuItem_Click" BorderBrush="DarkGray" Margin="1"
-                    ToolTip="Clear Log">
+                    ToolTip="清除日志">
                 <Button.Content>
                     <Image Margin="-3" Source="resources/clearlog.ico" Style="{StaticResource ImageEnableDisableStyle}"/>
                 </Button.Content>
             </Button>
             <Button Click="SaveLog_MenuItem_Click" BorderBrush="DarkGray" Margin="1"
-                    ToolTip="Save Log">
+                    ToolTip="保存日志">
                 <Button.Content>
                     <Image Margin="-3" Source="resources/savelog.ico" Style="{StaticResource ImageEnableDisableStyle}"/>
                 </Button.Content>
             </Button>
             <Separator/>
             <Button Click="About_MenuItem_Click" BorderBrush="DarkGray" Margin="1"
-                    ToolTip="About...">
+                    ToolTip="关于...">
                 <Button.Content>
                     <Image Margin="-3" Source="resources/about.ico" Style="{StaticResource ImageEnableDisableStyle}"/>
                 </Button.Content>
             </Button>
             <Separator/>
             <Button Click="Window_Exit" BorderBrush="DarkGray" Margin="1"
-                    ToolTip="Exit">
+                    ToolTip="退出">
                 <Button.Content>
                     <Image Margin="-3" Source="resources/exit.png" Style="{StaticResource ImageEnableDisableStyle}"/>
                 </Button.Content>
@@ -185,10 +234,10 @@
             <TreeView Name="tvTerminal" Grid.Column="0"/>
             <GridSplitter Grid.Column="0" Width="3" VerticalAlignment="Stretch" HorizontalAlignment="Right"/>
             <TabControl Name="tcTerminal" Grid.Column="1">
-                <TabItem Header="Log">
+                <TabItem Header="日志">
                     <DockPanel>
                         <DockPanel DockPanel.Dock="Bottom" Height="23">
-                            <CheckBox DockPanel.Dock="Left" Content="Auto Scrolling" HorizontalAlignment="Left" VerticalAlignment="Center"
+                            <CheckBox DockPanel.Dock="Left" Content="自动滚动" HorizontalAlignment="Left" VerticalAlignment="Center"
                                       IsThreeState="False" IsChecked="{Binding Path=LogAutoScrolling,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
                             <Grid/>
                         </DockPanel>
@@ -199,10 +248,10 @@
                                   SelectionMode="Single" HeadersVisibility="Column">
                                   <!--ItemContainerStyle="{StaticResource MessageRowBackground}"-->
                             <DataGrid.Columns>
-                                <DataGridTextColumn Header="Index" Width="50" MinWidth="50"
+                                <DataGridTextColumn Header="索引" Width="50" MinWidth="50"
                                         Binding="{Binding Path=IndexString,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" 
                                         IsReadOnly="True"/>
-                                <DataGridTextColumn Header="Time" Width="125" MinWidth="50"
+                                <DataGridTextColumn Header="时间" Width="125" MinWidth="50"
                                         Binding="{Binding Path=MsgDateTime,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" 
                                         IsReadOnly="True"/>
                                 <DataGridTemplateColumn MinWidth="25" MaxWidth="25" Width="25">
@@ -219,10 +268,10 @@
                                         </DataTemplate>
                                     </DataGridTemplateColumn.CellTemplate>
                                 </DataGridTemplateColumn>
-                                <DataGridTextColumn Header="IP Address" Width="100" MinWidth="50"
+                                <DataGridTextColumn Header="IP地址" Width="100" MinWidth="50"
                                         Binding="{Binding Path=IPAddr,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" 
                                         IsReadOnly="True"/>
-                                <DataGridTextColumn Header="Message" Width="750" MinWidth="50" 
+                                <DataGridTextColumn Header="消息" Width="750" MinWidth="50" 
                                         Binding="{Binding Path=Message,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" 
                                         IsReadOnly="True"/>
                             </DataGrid.Columns>
