--- a/SunRain/ManagementSystem/ManagementSystem/SelectDTU.xaml
+++ b/SunRain/ManagementSystem/ManagementSystem/SelectDTU.xaml
@@ -1,14 +1,14 @@
 ﻿<Window x:Class="ManagementSystem.SelectDTU"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Select DTU" Height="300" Width="600" WindowStartupLocation="CenterScreen" Loaded="Window_Load" Icon="/ManagementSystem;component/Resources/dtuview.ico">
+        Title="选择DTU" Height="300" Width="600" WindowStartupLocation="CenterScreen" Loaded="Window_Load" Icon="/ManagementSystem;component/Resources/dtuview.ico">
     <DockPanel>
         <DockPanel DockPanel.Dock="Bottom" Height="30">
             <!--Button Content="Refesh" Width="75" Margin="1" DockPanel.Dock="Left"
                     Click="Refresh_Button_Click"/-->
-            <Button Content="Cancel" Width="75" Margin="1,2,2,2" DockPanel.Dock="Right"
+            <Button Content="放弃" Width="75" Margin="1,2,2,2" DockPanel.Dock="Right"
                     IsDefault="True" Click="Cancel_Button_Click"/>
-            <Button Content="OK" Width="75" Margin="2,2,1,2" DockPanel.Dock="Right"
+            <Button Content="确认" Width="75" Margin="2,2,1,2" DockPanel.Dock="Right"
                     IsEnabled="{Binding Path=DTUSelectionOK,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
                     Click="OK_Button_Click"/>
             <Grid/>
@@ -30,19 +30,19 @@
                 <DataGridTextColumn Header="DTU ID" Width="100" MinWidth="50"
                                         Binding="{Binding Path=DtuId,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" 
                                         IsReadOnly="True"/>
-                <DataGridTextColumn Header="Controller" Width="100" MinWidth="50"
+                <DataGridTextColumn Header="控制员" Width="100" MinWidth="50"
                                         Binding="{Binding Path=ControllerName,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" 
                                         IsReadOnly="True"/>
                 <DataGridTextColumn Header="SIM ID" Width="125" MinWidth="50"
                                         Binding="{Binding Path=SimId,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" 
                                         IsReadOnly="True"/>
-                <DataGridTextColumn Header="Latest Online Time" Width="150" MinWidth="50"
+                <DataGridTextColumn Header="最近上线时间" Width="150" MinWidth="50"
                                         Binding="{Binding Path=DtLogString,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" 
                                         IsReadOnly="True"/>
-                <DataGridTextColumn Header="User Name" Width="200" MinWidth="50"
+                <DataGridTextColumn Header="用户名" Width="200" MinWidth="50"
                                         Binding="{Binding Path=UserName,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" 
                                         IsReadOnly="True"/>
-                <DataGridTextColumn Header="User Telephone" Width="150" MinWidth="50"
+                <DataGridTextColumn Header="用户电话" Width="150" MinWidth="50"
                                         Binding="{Binding Path=UserTel,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" 
                                         IsReadOnly="True"/>
             </DataGrid.Columns>
