--- a/SunRain/ManagementSystem/ServiceConfiguration/DTUConfiguration.xaml
+++ b/SunRain/ManagementSystem/ServiceConfiguration/DTUConfiguration.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         WindowStartupLocation="CenterScreen"
-        Title="DTU Configuration" Height="200" Width="450" ResizeMode="NoResize"
+        Title="DTU配置" Height="200" Width="450" ResizeMode="NoResize"
         Loaded="Window_Load">
     <Grid Margin="3">
         <Grid.RowDefinitions>
@@ -25,7 +25,7 @@
                  Text="{Binding Path=DtuId,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                  Foreground="{Binding Path=DtuIdFG,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                  IsEnabled="{Binding Path=DtuIdEnabled,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
-        <Label Grid.Row="2" Grid.Column="0" Content="User Name" FontWeight="Bold" HorizontalAlignment="Right" VerticalAlignment="Center"
+        <Label Grid.Row="2" Grid.Column="0" Content="用户名" FontWeight="Bold" HorizontalAlignment="Right" VerticalAlignment="Center"
                Foreground="{Binding Path=UserNameFG,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
         <TextBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" Margin="0,3,3,3"
                  ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Auto"
@@ -38,14 +38,14 @@
                  HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
                  Text="{Binding Path=SimId,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                  IsEnabled="{Binding Path=SimIdEnabled,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
-        <Label Grid.Row="3" Grid.Column="0" Content="User Telephone" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <Label Grid.Row="3" Grid.Column="0" Content="联系方式" HorizontalAlignment="Right" VerticalAlignment="Center"/>
         <TextBox Grid.Row="3" Grid.Column="1" Margin="0,3,3,3"
                  ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Auto"
                  HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
                  Text="{Binding Path=UserTel,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                  IsEnabled="{Binding Path=UserTelEnabled,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
-        <Button Grid.Row="4" Grid.Column="2" Margin="0,3,3,3" Name="btnOK" Content="OK" Click="OK_Button_Click"
+        <Button Grid.Row="4" Grid.Column="2" Margin="0,3,3,3" Name="btnOK" Content="确定" Click="OK_Button_Click"
                 IsEnabled="{Binding Path=InputOK,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
-        <Button Grid.Row="4" Grid.Column="3" Margin="0,3,3,3" Name="btnCancel" Content="Cancel" Click="Cancel_Button_Click"/>
+        <Button Grid.Row="4" Grid.Column="3" Margin="0,3,3,3" Name="btnCancel" Content="放弃" Click="Cancel_Button_Click"/>
     </Grid>
 </Window>
