--- a/SunRain/ManagementSystem/ServiceConfiguration/LocalConfiguration.xaml
+++ b/SunRain/ManagementSystem/ServiceConfiguration/LocalConfiguration.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:itl="clr-namespace:InformationTransferLibrary;assembly=InformationTransferLibrary"
-        Title="Local Configuration" Height="130" Width="400" ResizeMode="NoResize"
+        Title="本地配置" Height="130" Width="400" ResizeMode="NoResize"
         WindowStartupLocation="CenterScreen" Icon="/ServiceConfiguration;component/Resources/localconfig.ico"
         FontFamily="Calibri" FontSize="13" Loaded="Window_Load">
     <Window.Resources>
@@ -20,22 +20,22 @@
             <ColumnDefinition Width="75"></ColumnDefinition>
             <ColumnDefinition Width="75"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Label Content="Max Log" Grid.Row="0" Grid.Column="0" Margin="0,0,2,0"
+        <Label Content="最大日志数" Grid.Row="0" Grid.Column="0" Margin="0,0,-15,0"
                HorizontalAlignment="Right" VerticalAlignment="Center"
                Foreground="{Binding Path=MaxLogCountFG,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
-        <TextBox Name="txtMaxLog" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="1" Margin="2,0,5,0"
+        <TextBox Name="txtMaxLog" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="1" Margin="15,0,5,0"
                  Foreground="{Binding Path=MaxLogCountFG,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
                  Text="{Binding Path=MaxLogCountString,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                  HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
-        <Label Content="Max Disp Log" Grid.Row="1" Grid.Column="0" Margin="0,0,2,0"
+        <Label Content="最大显示日志数" Grid.Row="1" Grid.Column="0" Margin="0,0,-15,0"
                HorizontalAlignment="Right" VerticalAlignment="Center"
                Foreground="{Binding Path=MaxLogDisplayCountFG,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
-        <TextBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="1" Margin="2,0,5,0"
+        <TextBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="1" Margin="15,0,5,0"
                  Foreground="{Binding Path=MaxLogDisplayCountFG,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
                  Text="{Binding Path=MaxLogDisplayCountString,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                  HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
-        <Button Name="btnOK" Grid.Row="2" Grid.Column="2" Height="25" Margin="0,3,5,2" Content="OK" Click="OK_Button_Click"
+        <Button Name="btnOK" Grid.Row="2" Grid.Column="2" Height="25" Margin="0,3,5,2" Content="确定" Click="OK_Button_Click"
                 IsEnabled="{Binding Path=InputOK,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
-        <Button Name="btnCancel" Grid.Row="2" Grid.Column="3" Height="25" Margin="0,3,5,2" Content="Cancel" Click="Cancel_Button_Click" IsDefault="True" />
+        <Button Name="btnCancel" Grid.Row="2" Grid.Column="3" Height="25" Margin="0,3,5,2" Content="放弃" Click="Cancel_Button_Click" IsDefault="True" />
     </Grid>
 </Window>
