--- a/SunRain/ManagementSystem/ServiceConfiguration/NewUser.xaml
+++ b/SunRain/ManagementSystem/ServiceConfiguration/NewUser.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="ServiceConfiguration.NewUser"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="New User" Height="200" ResizeMode="NoResize" Width="350" 
+        Title="新建用户" Height="200" ResizeMode="NoResize" Width="350" 
         WindowStartupLocation="CenterScreen" Loaded="Window_Load">
     <Grid Margin="3">
         <Grid.RowDefinitions>
@@ -17,34 +17,34 @@
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Label Grid.Row="0" Grid.Column="0" Content="User Name" HorizontalAlignment="Right" VerticalAlignment="Center"
+        <Label Grid.Row="0" Grid.Column="0" Content="用户名" HorizontalAlignment="Right" VerticalAlignment="Center"
                Foreground="{Binding Path=UserNameFG,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
         <TextBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" Margin="0,3,3,3" Name="txtUserName"
                  HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
                  Text="{Binding Path=UserName,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                  Foreground="{Binding Path=UserNameFG,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
-        <Label Grid.Row="1" Grid.Column="0" Content="Password" HorizontalAlignment="Right" VerticalAlignment="Center"
+        <Label Grid.Row="1" Grid.Column="0" Content="密码" HorizontalAlignment="Right" VerticalAlignment="Center"
                Foreground="{Binding Path=PasswordFG,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
         <PasswordBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" Margin="0,3,3,3"
                  HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
                  PasswordChanged="Password_Changed" Name="pbPassword" PasswordChar="*"
                  Foreground="{Binding Path=PasswordFG,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
-        <Label Grid.Row="2" Grid.Column="0" Content="Password Again" HorizontalAlignment="Right" VerticalAlignment="Center"
+        <Label Grid.Row="2" Grid.Column="0" Content="再次输入密码" HorizontalAlignment="Right" VerticalAlignment="Center"
                Foreground="{Binding Path=PasswordFG,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
         <PasswordBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" Margin="0,3,3,3"
                  HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
                  PasswordChanged="PasswordAgain_Changed" Name="pbPasswordAgain" PasswordChar="*"
                  Foreground="{Binding Path=PasswordFG,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
-        <Label Grid.Row="3" Grid.Column="0" Content="Permission" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <Label Grid.Row="3" Grid.Column="0" Content="权限" HorizontalAlignment="Right" VerticalAlignment="Center"/>
         <ComboBox Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Margin="0,3,3,3" Name="cbPermission"
                   IsEnabled="{Binding Path=PermissionEnabled,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
                   SelectedIndex="0" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
                   SelectionChanged="NewPermission_ComboBox_SelectionChanged">
-            <ComboBoxItem Content="2 - Common User"/>
-            <ComboBoxItem Content="1 - Manage User"/>
+            <ComboBoxItem Content="2 - 普通用户"/>
+            <ComboBoxItem Content="1 - 管理用户"/>
         </ComboBox>
-        <Button Grid.Row="4" Grid.Column="2" Margin="0,3,3,3" Name="btnOK" Content="OK" Click="OK_Button_Click"
+        <Button Grid.Row="4" Grid.Column="2" Margin="0,3,3,3" Name="btnOK" Content="确认" Click="OK_Button_Click"
                 IsEnabled="{Binding Path=InputOK,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
-        <Button Grid.Row="4" Grid.Column="3" Margin="0,3,3,3" Name="btnCancel" Content="Cancel" Click="Cancel_Button_Click"/>
+        <Button Grid.Row="4" Grid.Column="3" Margin="0,3,3,3" Name="btnCancel" Content="放弃" Click="Cancel_Button_Click"/>
     </Grid>
 </Window>
