--- a/SunRain/ManagementSystem/ManagementSystem/ManagementSystem.xaml
+++ b/SunRain/ManagementSystem/ManagementSystem/ManagementSystem.xaml
@@ -245,7 +245,7 @@
                                   CanUserAddRows="False" CanUserDeleteRows="True" 
                                   HorizontalGridLinesBrush="LightGray" VerticalGridLinesBrush="LightGray" 
                                   VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible" 
-                                  SelectionMode="Single" HeadersVisibility="Column">
+                                  SelectionMode="Single" HeadersVisibility="Column" CanUserSortColumns="False">
                                   <!--ItemContainerStyle="{StaticResource MessageRowBackground}"-->
                             <DataGrid.Columns>
                                 <DataGridTextColumn Header="索引" Width="50" MinWidth="50"
