--- a/SunRain/ManagementSystem/TerminalConfiguration/TerminalConfiguration.xaml
+++ b/SunRain/ManagementSystem/TerminalConfiguration/TerminalConfiguration.xaml
@@ -361,7 +361,7 @@
                         CanUserAddRows="False" CanUserDeleteRows="True" 
                         HorizontalGridLinesBrush="LightGray" VerticalGridLinesBrush="LightGray" 
                         VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" 
-                        SelectionMode="Single" HeadersVisibility="Column"
+                        SelectionMode="Single" HeadersVisibility="Column" CanUserSortColumns="False"
                           ItemContainerStyle="{StaticResource MessageRowBackground}">
                     <DataGrid.Columns>
                         <DataGridTemplateColumn MinWidth="25" MaxWidth="25" Width="25">
@@ -407,7 +407,7 @@
                         CanUserAddRows="False" CanUserDeleteRows="True" 
                         HorizontalGridLinesBrush="LightGray" VerticalGridLinesBrush="LightGray" 
                         VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" 
-                        SelectionMode="Single" HeadersVisibility="Column">
+                        SelectionMode="Single" HeadersVisibility="Column" CanUserSortColumns="False">
                     <DataGrid.Columns>
                         <DataGridTemplateColumn MinWidth="25" MaxWidth="25" Width="25">
                             <DataGridTemplateColumn.CellTemplate>
