--- a/SunRain/ManagementSystem/ServiceConfiguration/ViewUserMsgLog.xaml
+++ b/SunRain/ManagementSystem/ServiceConfiguration/ViewUserMsgLog.xaml
@@ -2,7 +2,40 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="查看用户与DTU交互信息" Height="400" Width="600">
-    <Grid>
-        
-    </Grid>
+    <DockPanel>
+        <StatusBar DockPanel.Dock="Bottom" Height="30">
+            <Label Content="{Binding Path=ReadyString,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
+        </StatusBar>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <TreeView Name="tvDate" Grid.Column="0"/>
+            <DataGrid AutoGenerateColumns="False" Name="dgDtu" ItemsSource="{Binding}"
+                  CanUserAddRows="False" CanUserDeleteRows="True" Grid.Column="1"
+                  HorizontalGridLinesBrush="LightGray" VerticalGridLinesBrush="LightGray" 
+                  VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible" 
+                  SelectionMode="Single" HeadersVisibility="Column" CanUserSortColumns="False">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="DTU标识" Width="100" MinWidth="50"
+                                        Binding="{Binding Path=DTUID,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" 
+                                        IsReadOnly="True"/>
+                    <DataGridTemplateColumn MinWidth="25" MaxWidth="25" Width="25">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Image Height="13" Source="{Binding Path=FlowImage,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                    <DataGridTextColumn Header="时间" Width="SizeToCells" MinWidth="50"
+                                        Binding="{Binding Path=DtLogString,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" 
+                                        IsReadOnly="True"/>
+                    <DataGridTextColumn Header="消息内容" Width="SizeToCells" MinWidth="100"
+                                        Binding="{Binding Path=Message,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" 
+                                        IsReadOnly="True"/>
+                </DataGrid.Columns>
+            </DataGrid>
+        </Grid>
+    </DockPanel>
 </Window>
