fix xqq request : delete and re-add dtu, disconnect dtu and reconnect dtu without delete it in DTU management platform

--- a/SunRain/ManagementSystem/ManagementSystem/LocalConfiguration.xaml
+++ b/SunRain/ManagementSystem/ManagementSystem/LocalConfiguration.xaml
@@ -8,7 +8,7 @@
     <Window.Resources>
         <itl:StringIntConverter x:Key="StringIntConverter"/>
     </Window.Resources>
-    <Grid IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
