--- a/SunRain/ManagementSystem/ManagementSystem/ManagementSystem.xaml
+++ b/SunRain/ManagementSystem/ManagementSystem/ManagementSystem.xaml
@@ -46,7 +46,7 @@
                     </MenuItem.Icon>
                 </MenuItem>
             </MenuItem>
-            <MenuItem Header="配置">
+            <MenuItem Header="配置" IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
                 <!--MenuItem Header="重新连接" Click="Reconnect_MenuItem_Click"
                           IsEnabled="{Binding Path=NotConnected,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
                     <MenuItem.Icon>
@@ -54,21 +54,19 @@
                     </MenuItem.Icon>
                 </MenuItem>
                 <Separator/-->
-                <MenuItem Header="服务器配置" Click="ServerConfig_MenuItem_Click"
-                          IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
+                <MenuItem Header="服务器配置" Click="ServerConfig_MenuItem_Click">
                     <MenuItem.Icon>
                         <Image Source="resources/remoteconfig.ico" Height="15" Style="{StaticResource ImageEnableDisableStyle}"/>
                     </MenuItem.Icon>
                 </MenuItem>
-                <MenuItem Header="本地配置" Click="LocalConfig_MenuItem_Click"
-                          IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
+                <MenuItem Header="本地配置" Click="LocalConfig_MenuItem_Click">
                     <MenuItem.Icon>
                         <Image Source="resources/localconfig.ico" Height="15" Style="{StaticResource ImageEnableDisableStyle}"/>
                     </MenuItem.Icon>
                 </MenuItem>
                 <Separator/>
                 <MenuItem Header="添加DTU" Click="AddDTU_MenuItem_Click"
-                          IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
+                          IsEnabled="{Binding Path=Connected,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
                     <MenuItem.Icon>
                         <Image Source="resources/addterminal.ico" Height="15" Style="{StaticResource ImageEnableDisableStyle}"/>
                     </MenuItem.Icon>
@@ -79,8 +77,7 @@
                         <Image Source="resources/refreshterminal.ico" Height="15" Style="{StaticResource ImageEnableDisableStyle}"/>
                     </MenuItem.Icon>
                 </MenuItem-->
-                <MenuItem Header="删除DTU" Click="DeleteDTU_MenuItem_Click"
-                          IsEnabled="{Binding Path=NotInRun,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}">
+                <MenuItem Header="删除DTU" Click="DeleteDTU_MenuItem_Click">
                     <MenuItem.Icon>
                         <Image Source="resources/deleteterminal.ico" Height="15" Style="{StaticResource ImageEnableDisableStyle}"/>
                     </MenuItem.Icon>
@@ -151,6 +148,7 @@
             </Button>
             <Separator/>
             <Button Click="AddDTU_MenuItem_Click" BorderBrush="DarkGray" Margin="1"
+                    IsEnabled="{Binding Path=Connected,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
                     ToolTip="添加DTU">
                 <Button.Content>
                     <Image Margin="-3" Source="resources/addterminal.ico" Style="{StaticResource ImageEnableDisableStyle}"/>
@@ -268,7 +266,7 @@
                                         </DataTemplate>
                                     </DataGridTemplateColumn.CellTemplate>
                                 </DataGridTemplateColumn>
-                                <DataGridTextColumn Header="IP地址" Width="100" MinWidth="50"
+                                <DataGridTextColumn Header="DTU标识" Width="100" MinWidth="50"
                                         Binding="{Binding Path=IPAddr,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" 
                                         IsReadOnly="True"/>
                                 <DataGridTextColumn Header="消息" Width="750" MinWidth="50" 
